--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,7 @@ padding: 0;
 0 2px 2px #000, 
 -2px 0 2px #000, 
 0 -2px 2px #000;
-background-image: url("/img/header-back.jpg");
+background-image: url("/FlowersSite/img/header-back.jpg");
 background-blend-mode: darken;
 height: 100px;
 
@@ -512,7 +512,6 @@ display: inline-block;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-bottom: 5px;
     margin-top: 5px;
-    
 }
 
 .main-top-text{
@@ -546,13 +545,28 @@ display: inline-block;
      4px 4px 5px 0px rgba(0,0,0,.1);
     outline: none;
   }
+
+.main-page-button {
+    margin-left: 170px;
+    margin-top: 20px;
+}
+
+
+.product_info p{
+    display:inline-block;
+    width: 400px;
+    margin-left: 100px;
+
+}
+.cst-btn{
+    margin: 20px;
+}
   .first-button {
     text-decoration: none;
     width: 160px;
     height: 50px;
     text-align: center;
-    margin-left: 170px;
-    margin-top: 20px;
+
     line-height: 42px;
     padding: 0;
     border: none;
@@ -641,7 +655,6 @@ display: inline-block;
     .about_info_wrap{
         margin-left: 300px;
         margin-bottom: 50px;
-        
     }
   .about_info_wrap h3 {
     margin-top: 0px;
@@ -653,7 +666,7 @@ display: inline-block;
     
 }
 .about_info_wrap p{
-    width: 1500px;
+
     font-size: 18px;
     line-height: 28px;
 }
